--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "jest --watch --verbose --runInBand",
-    "start": "nodemon index.js"
+    "server": "nodemon index.js",
+    "start": "node index.js"
   },
   "repository": {
     "type": "git",
@@ -25,6 +26,7 @@
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.21.1",
     "knex-cleaner": "^1.3.0",
+    "pg": "^8.2.1",
     "sqlite3": "^4.2.0"
   }
 }
