--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "jest --watch --verbose --runInBand",
-    "server": "nodemon index.js",
+    "dev-start": "nodemon index.js",
     "start": "node index.js"
   },
   "repository": {
@@ -30,5 +30,8 @@
     "knex-cleaner": "^1.3.0",
     "pg": "^8.2.1",
     "sqlite3": "^4.2.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.4"
   }
 }
